@@ -1243,7 +1243,10 @@ int main() {
 	std::vector<mypair> a;
 	a.push_back(mypair(4, 4));
 	a.emplace_back(5, 5);
-	return (a.size() == 2) ? 0 : 1;
+	std::vector<bool> b;
+	b.push_back(true);
+	b.emplace_back(true);
+	return ((a.size() == 2) && (b.size() == 2)) ? 0 : 1;
 }
 ''', args : flags_dialect)
 message('emplace_back: ' + have_emplace_back.to_string())
